kubernetes/env/aks-azure-dev/localai_1B.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: localai
    namespace: development
spec:
    replicas: 1
    selector:
        matchLabels:
            app: localai
    template:
        metadata:
            labels:
                app: localai
        spec:
            containers:
                - name: localai
                  image: localai/localai:latest-cpu
                  resources:
                      requests:
                          cpu: '300m'
                          memory: '1200Mi'
                      limits:
                          cpu: '1000m'
                          memory: '2000Mi'
                  volumeMounts:
                      - name: models
                        mountPath: /models
            volumes:
                - name: models
                  persistentVolumeClaim:
                      claimName: localai-models-pvc
