kubernetes/env/aks-azure-dev/ollama_bigger_pool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-engine
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      nodeSelector:
        # Se hai creato il pool "tempcpu" (Standard_F8s_v2), usa questa label:
        app: ollama-temp 
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "6"    # Più core = più velocità su CPU
            memory: "8Gi"
          limits:
            cpu: "7"
            memory: "10Gi" # Llama 3.1 (4.7GB) + OS + Buffer
        volumeMounts:
        - name: data
          mountPath: /root/.ollama
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ollama-storage
