kubernetes/env/aks-azure-dev/localai_pumped_version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: localai
    namespace: development
    labels:
        Project: AdhrEnterpriseSuite
        Owner: SistemiInformativi
spec:
    replicas: 1
    selector:
        matchLabels:
            app: localai
    template:
        metadata:
            labels:
                app: localai
                Project: AdhrEnterpriseSuite # Tag per tracciamento pod
        spec:
            containers:
                - name: localai
                  image: localai/localai:latest-aio-cpu
                  resources:
                      requests:
                          cpu: '300m'
                          memory: '1800Mi'
                      limits:
                          cpu: '1000m' # Limitiamo per non saturare la tua B2s (2 vCPU)
                          memory: '2500Mi'
                  volumeMounts:
                      - name: models
                        mountPath: /models
            volumes:
                - name: models
                  persistentVolumeClaim:
                      claimName: localai-models-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: localai-service
    namespace: development
spec:
    selector:
        app: localai
    ports:
        - protocol: TCP
          port: 80 # I pod che vogliono raggiungere questo servizio utilizzano questa porta.
          targetPort: 8080 # dentro il pods il componente gira alla porta 8080 ( localai )
