kubernetes/env/aks-azure-dev/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-engine
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      # 1. Seleziona il nodo con la label specifica
      nodeSelector:
        app: llm-worker
      # 2. Permette al pod di ignorare il "divieto" (Taint) del nodo dedicato
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "llm"
        effect: "NoSchedule"
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "2.5"
            memory: "8Gi"
          limits:
            cpu: "4"
            memory: "12Gi"
        volumeMounts:
        - name: data
          mountPath: /root/.ollama
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ollama-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: development
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
