kubernetes/env/aks-azure-dev/ollama_old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-engine
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      nodeSelector:
        app: llm-worker
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "3"
            memory: "8Gi"
          limits:
            cpu: "4"
            memory: "12Gi"
        volumeMounts:
        - name: data
          mountPath: /root/.ollama
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ollama-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: development
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
