kubernetes/env/aks-azure-dev/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
    name: keycloak
    labels:
        app: keycloak
spec:
    ports:
        - protocol: TCP
          port: 8080
          targetPort: http
          name: http
    selector:
        app: keycloak
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: keycloak
    name: keycloak-discovery
spec:
    selector:
        app: keycloak
    clusterIP: None
    type: ClusterIP
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
    name: keycloak
    labels:
        app: keycloak
spec:
    serviceName: keycloak-discovery
    # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
    replicas: 1
    selector:
        matchLabels:
            app: keycloak
    template:
        metadata:
            labels:
                app: keycloak
        spec:
            containers:
                - name: keycloak
                  image: adhresregistry.azurecr.io/keycloak-custom-theme:development-latest
                  imagePullPolicy: Always # Kubernetes deve fare sempre il pull dell'immagine aggiornata
                  #image: quay.io/keycloak/keycloak:26.5.5
                  args: ['start']
                  ports:
                      - name: http
                        containerPort: 8080
                      - name: jgroups
                        containerPort: 7800
                      - name: jgroups-fd
                        containerPort: 57800
                      - name: management
                        containerPort: 9000
                  startupProbe:
                      httpGet:
                          path: /health/started
                          port: 9000
                      periodSeconds: 1
                      failureThreshold: 600
                  readinessProbe:
                      httpGet:
                          path: /health/ready
                          port: 9000
                      periodSeconds: 10
                      failureThreshold: 3
                  livenessProbe:
                      httpGet:
                          path: /health/live
                          port: 9000
                      periodSeconds: 10
                      failureThreshold: 3
                  resources:
                      limits:
                          cpu: 500m # da 2000m a 500m
                          memory: 1000Mi # da 2000Mi a 1000Mi
                      requests:
                          cpu: 100m # Da 500m l'ho passato a 100m
                          memory: 600Mi # Da 1700Mi a 600Mi (il minimo per far girare Quarkus decentemente)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak
    annotations:
        nginx.ingress.kubernetes.io/proxy-buffer-size: '128k'
        # Forza il redirect automatico da http a https
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - auth.4.232.3.98.nip.io
          secretName: keycloak-tls-secret
    rules:
        - host: auth.4.232.3.98.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak
                            port:
                                number: 8080
